--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -1,7 +1,9 @@
 set timeout=0
 set default=0
 
-menuentry "gopheros" {
+menuentry "letsgoos" {
     multiboot2 /boot/kernel.bin
+    module2 /boot/kernel.bin /boot/kernel.bin
+    module2 /usr/shell.o /usr/shell.o
     boot
 }
