got some sort of scheduling and got C programs to run. Now only go programs need to be able to run and we're good to go for the filesystem

--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -3,7 +3,10 @@ set default=0
 
 menuentry "letsgoos" {
     multiboot2 /boot/kernel.bin
-    module2 /boot/kernel.bin /boot/kernel.bin
-    module2 /usr/shell.o /usr/shell.o
+ module2 /usr/hellogo /usr/hellogo
+ module2 /usr/shell /usr/shell
+ module2 /usr/statx /usr/statx
+ module2 /usr/test /usr/test
+ 
     boot
 }
