--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -3,10 +3,12 @@ set default=0
 
 menuentry "letsgoos" {
     multiboot2 /boot/kernel.bin
+ module2 /usr/helloc /usr/helloc
  module2 /usr/hellogo /usr/hellogo
+ module2 /usr/hellorust /usr/hellorust
+ module2 /usr/readtest /usr/readtest
  module2 /usr/shell /usr/shell
  module2 /usr/statx /usr/statx
- module2 /usr/test /usr/test
  
     boot
 }
