Started working on a terminal written in rust

--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -7,6 +7,7 @@ menuentry "letsgoos" {
  module2 /usr/hellogo /usr/hellogo
  module2 /usr/hellorust /usr/hellorust
  module2 /usr/readtest /usr/readtest
+ module2 /usr/rustread /usr/rustread
  module2 /usr/shell /usr/shell
  module2 /usr/statx /usr/statx
  
