--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -4,6 +4,7 @@ set default=0
 menuentry "letsgoos" {
     multiboot2 /boot/kernel.bin
  module2 /usr/helloc /usr/helloc
+ module2 /usr/hellocxx /usr/hellocxx
  module2 /usr/hellogo /usr/hellogo
  module2 /usr/hellorust /usr/hellorust
  module2 /usr/readtest /usr/readtest
