--- a/arch/x86/script/grub.cfg
+++ b/arch/x86/script/grub.cfg
@@ -3,6 +3,7 @@ set default=0
 
 menuentry "letsgoos" {
     multiboot2 /boot/kernel.bin
+ module2 /usr/bomb /usr/bomb
  module2 /usr/helloc /usr/helloc
  module2 /usr/hellocxx /usr/hellocxx
  module2 /usr/hellogo /usr/hellogo
